fix(gui): improve code tabs, sync and related code